Summary of important user-visible changes for Pod::Weaver::Section::GenerateSection
-----------------------------------------------------------------------------------

{{$NEXT}}

1.00      2013-03-21 22:42:01 Europe/Dublin
  * Initial release.