@@ -2,6 +2,7 @@ Summary of important user-visible changes for Pod::Weaver::Section::GenerateSect
 -----------------------------------------------------------------------------------
 
 {{$NEXT}}
+  * Introduced option to use no heading with a head value of 0 (zero).
 
 1.00      2013-03-21 22:42:01 Europe/Dublin
   * Initial release.
